feat: domain management
